--- a/webapp/src/views/partials/dataform.hbs
+++ b/webapp/src/views/partials/dataform.hbs
@@ -1,10 +1,10 @@
 <div class="form-group row">
     <label class="col-sm-3 col-form-label">Entrega</label>
     <div class="col-sm-4">
-        <input type="date" name="data_deliver" class="form-control">
+        <input type="date" name="data_deliver_date" class="form-control">
     </div>
     <div class="col-sm-4">
-        <input type="time" name="data_deliver" class="form-control">
+        <input type="time" name="data_deliver_time" class="form-control">
     </div>
 </div>
 <div class="form-group row">
@@ -40,7 +40,7 @@
 <div class="form-group row">
     <label class="col-sm-3 col-form-label">Estacionamientos</label>
     <div class="col-sm-8">
-        <input type="text" maxlength="50" required name="data_district" class="form-control" placeholder="ALFANUMÉRICO">
+        <input type="text" maxlength="50" required name="data_parkingno" class="form-control" placeholder="ALFANUMÉRICO">
     </div>
 </div>
 <div class="form-group row">
